--- a/07_OOP/00_OOP 101.md
+++ b/07_OOP/00_OOP 101.md
@@ -1,29 +1,91 @@
-often called the pillars of object-oriented programming (OOP):
-• Encapsulation: How does this language hide an object’s internal implementation
-details and preserve data integrity?
-• Inheritance: How does this language promote code reuse?
-• Polymorphism: How does this language let you treat related objects in a similar way?
+# Object-Oriented Programming (OOP) Introduction
 
-one of the most fundamental programming constructs is the class
-type.
-of field data (often called member variables
+In this lecture, we'll delve into the foundational concepts of Object-Oriented Programming (OOP), often referred to as the pillars of OOP: **Encapsulation**, **Inheritance**, and **Polymorphism**. These concepts are crucial for understanding how to design and structure code in an object-oriented manner.
 
-    Defining a namespace is strictly required for these examples. However, it is a good practice to get
-into the habit of using namespaces for all of your code.
+## Encapsulation
 
+Encapsulation is the concept of bundling data and methods that operate on the data within a single unit, typically a class. It allows us to hide the internal implementation details of an object and provides a way to ensure data integrity. 
+
+### Example:
+
+```csharp
 class Car
 {
-// The 'state' of the Car.
-public string petName;
-public int currSpeed;
+    // The 'state' of the Car.
+    public string Name; // Encapsulation allows access to this field through methods.
+    private int _speed; // Encapsulation hides this field from external access.
+
+    // Method to set the speed of the car.
+    public void SetSpeed(int speed)
+    {
+        _speed = speed;
+    }
+}
+```
+
+In this example, the `Name` field is public, allowing access to it from outside the class, while the `_speed` field is private, ensuring it can only be modified through the `SetSpeed` method.
+
+## Inheritance
+
+Inheritance is a mechanism by which a new class can inherit properties and behavior from an existing class, promoting code reuse and establishing a hierarchy of classes.
+
+### Example:
+
+```csharp
+class Vehicle
+{
+    public string Make;
+    public string Model;
 }
 
-Field data of a class should seldom (if ever) be defined as public.
+class Car : Vehicle // Car inherits from Vehicle
+{
+    public int Year;
+}
+```
 
-Car myCar;
-myCar = new Car();
-myCar.petName = "Fred";
+Here, the `Car` class inherits the `Make` and `Model` properties from the `Vehicle` class.
 
-start private (or internal) class-level variable names with an
-underscore (e.g., _driverName) so IntelliSense shows all of your variables at the top of the list.
+## Polymorphism
 
+Polymorphism allows objects of different types to be treated as objects of a common base type. It enables flexibility and extensibility in code by allowing methods to be overridden in derived classes.
+
+### Example:
+
+```csharp
+class Animal
+{
+    public virtual void MakeSound()
+    {
+        Console.WriteLine("Animal makes a sound.");
+    }
+}
+
+class Dog : Animal
+{
+    public override void MakeSound()
+    {
+        Console.WriteLine("Dog barks.");
+    }
+}
+
+class Cat : Animal
+{
+    public override void MakeSound()
+    {
+        Console.WriteLine("Cat meows.");
+    }
+}
+```
+
+In this example, both `Dog` and `Cat` classes inherit from the `Animal` class and override the `MakeSound` method to provide specific behavior.
+
+## Best Practices
+
+- **Namespace Usage**: While not strictly required in these examples, it's good practice to use namespaces to organize your code and avoid naming conflicts.
+
+- **Access Modifiers**: Field data of a class should seldom be defined as public; instead, prefer encapsulation by using private or internal access modifiers.
+
+- **Naming Conventions**: Start private (or internal) class-level variable names with an underscore to differentiate them from public members.
+
+By understanding and applying these OOP concepts, you can write more organized, maintainable, and extensible code in C#.
