--- a/07_OOP/0_OOP 101.md
+++ b/07_OOP/0_OOP 101.md
@@ -1,6 +1,6 @@
 # Object-Oriented Programming (OOP) Introduction
 
-In this lecture, we'll delve into the foundational concepts of Object-Oriented Programming (OOP), often referred to as the pillars of OOP: **Encapsulation**, **Inheritance**, and **Polymorphism**. These concepts are crucial for understanding how to design and structure code in an object-oriented manner.
+In this lecture, we'll delve into the foundational concepts of Object-Oriented Programming (OOP), often referred to as the pillars of OOP: **Encapsulation**, **Inheritance**, **Abstraction** and **Polymorphism**. These concepts are crucial for understanding how to design and structure code in an object-oriented manner.
 
 ## Encapsulation
 
