--- a/07_OOP/0_OOP 101.md
+++ b/07_OOP/0_OOP 101.md
@@ -1,91 +1,91 @@
-# Object-Oriented Programming (OOP) Introduction
+# Introduction à la Programmation Orientée Objet (POO)
 
-In this lecture, we'll delve into the foundational concepts of Object-Oriented Programming (OOP), often referred to as the pillars of OOP: **Encapsulation**, **Inheritance**, **Abstraction** and **Polymorphism**. These concepts are crucial for understanding how to design and structure code in an object-oriented manner.
+Dans cette leçon, nous explorerons les concepts fondamentaux de la Programmation Orientée Objet (POO), souvent désignés comme les piliers de la POO : **Encapsulation**, **Héritage**, **Abstraction** et **Polymorphisme**. Ces concepts sont cruciaux pour comprendre comment concevoir et structurer le code de manière orientée objet.
 
 ## Encapsulation
 
-Encapsulation is the concept of bundling data and methods that operate on the data within a single unit, typically a class. It allows us to hide the internal implementation details of an object and provides a way to ensure data integrity. 
+L'encapsulation est le concept de regrouper des données et des méthodes qui opèrent sur ces données au sein d'une seule unité, généralement une classe. Cela nous permet de masquer les détails de l'implémentation interne d'un objet et fournit un moyen de garantir l'intégrité des données.
 
-### Example:
+### Exemple :
 
 ```csharp
-class Car
+class Voiture
 {
-    // The 'state' of the Car.
-    public string Name; // Encapsulation allows access to this field through methods.
-    private int _speed; // Encapsulation hides this field from external access.
+    // L'état de la voiture.
+    public string Nom; // L'encapsulation permet l'accès à ce champ via des méthodes.
+    private int _vitesse; // L'encapsulation cache ce champ de l'accès externe.
 
-    // Method to set the speed of the car.
-    public void SetSpeed(int speed)
+    // Méthode pour définir la vitesse de la voiture.
+    public void DéfinirVitesse(int vitesse)
     {
-        _speed = speed;
+        _vitesse = vitesse;
     }
 }
 ```
 
-In this example, the `Name` field is public, allowing access to it from outside the class, while the `_speed` field is private, ensuring it can only be modified through the `SetSpeed` method.
+Dans cet exemple, le champ `Nom` est public, permettant d'y accéder depuis l'extérieur de la classe, tandis que le champ `_vitesse` est privé, garantissant qu'il ne peut être modifié que par la méthode `DéfinirVitesse`.
 
-## Inheritance
+## Héritage
 
-Inheritance is a mechanism by which a new class can inherit properties and behavior from an existing class, promoting code reuse and establishing a hierarchy of classes.
+L'héritage est un mécanisme par lequel une nouvelle classe peut hériter des propriétés et du comportement d'une classe existante, favorisant la réutilisation du code et établissant une hiérarchie de classes.
 
-### Example:
+### Exemple :
 
 ```csharp
-class Vehicle
+class Vehicule
 {
-    public string Make;
-    public string Model;
+    public string Marque;
+    public string Modèle;
 }
 
-class Car : Vehicle // Car inherits from Vehicle
+class Voiture : Vehicule // La Voiture hérite de Vehicule
 {
-    public int Year;
+    public int Année;
 }
 ```
 
-Here, the `Car` class inherits the `Make` and `Model` properties from the `Vehicle` class.
+Ici, la classe `Voiture` hérite des propriétés `Marque` et `Modèle` de la classe `Vehicule`.
 
-## Polymorphism
+## Polymorphisme
 
-Polymorphism allows objects of different types to be treated as objects of a common base type. It enables flexibility and extensibility in code by allowing methods to be overridden in derived classes.
+Le polymorphisme permet à des objets de types différents d'être traités comme des objets d'un type de base commun. Il permet la flexibilité et l'extensibilité du code en permettant aux méthodes d'être redéfinies dans les classes dérivées.
 
-### Example:
+### Exemple :
 
 ```csharp
 class Animal
 {
-    public virtual void MakeSound()
+    public virtual void ProduireSon()
     {
-        Console.WriteLine("Animal makes a sound.");
+        Console.WriteLine("L'animal produit un son.");
     }
 }
 
-class Dog : Animal
+class Chien : Animal
 {
-    public override void MakeSound()
+    public override void ProduireSon()
     {
-        Console.WriteLine("Dog barks.");
+        Console.WriteLine("Le chien aboie.");
     }
 }
 
-class Cat : Animal
+class Chat : Animal
 {
-    public override void MakeSound()
+    public override void ProduireSon()
     {
-        Console.WriteLine("Cat meows.");
+        Console.WriteLine("Le chat miaule.");
     }
 }
 ```
 
-In this example, both `Dog` and `Cat` classes inherit from the `Animal` class and override the `MakeSound` method to provide specific behavior.
+Dans cet exemple, les classes `Chien` et `Chat` héritent de la classe `Animal` et redéfinissent la méthode `ProduireSon` pour fournir un comportement spécifique.
 
-## Best Practices
+## Bonnes Pratiques
 
-- **Namespace Usage**: While not strictly required in these examples, it's good practice to use namespaces to organize your code and avoid naming conflicts.
+- **Utilisation des espaces de noms**: Bien que pas strictement requis dans ces exemples, il est recommandé d'utiliser des espaces de noms pour organiser votre code et éviter les conflits de noms.
 
-- **Access Modifiers**: Field data of a class should seldom be defined as public; instead, prefer encapsulation by using private or internal access modifiers.
+- **Modificateurs d'accès**: Les données de champ d'une classe doivent rarement être définies comme publiques ; préférez plutôt l'encapsulation en utilisant des modificateurs d'accès privés ou internes.
 
-- **Naming Conventions**: Start private (or internal) class-level variable names with an underscore to differentiate them from public members.
+- **Conventions de nommage**: Commencez les noms de variables de niveau de classe privées (ou internes) par un tiret bas pour les différencier des membres publics.
 
-By understanding and applying these OOP concepts, you can write more organized, maintainable, and extensible code in C#.
+En comprenant et en appliquant ces concepts de POO, vous pouvez écrire un code plus organisé, maintenable et extensible en C#.
