--- a/02_Data Types/03_enum/0_enum 101.md
+++ b/02_Data Types/03_enum/0_enum 101.md
@@ -1,7 +1,7 @@
 ```csharp
 static void SwitchOnDayOfWeek()
 {
-    Console.Write("Enter your favorite day of the week: ");
+    Console.Write("Entrez votre jour de la semaine préféré : ");
     DayOfWeek userDay;
     try
     {
@@ -9,89 +9,89 @@ static void SwitchOnDayOfWeek()
     }
     catch (Exception)
     {
-        Console.WriteLine("Invalid input!");
+        Console.WriteLine("Entrée invalide !");
         return;
     }
     
     switch (userDay)
     {
-        case DayOfWeek.Monday:
-            Console.WriteLine("Monday is a great day!");
+        case DayOfWeek.Lundi:
+            Console.WriteLine("Le lundi est un jour génial !");
             break;
-        case DayOfWeek.Tuesday:
-            Console.WriteLine("Tuesday is wonderful!");
+        case DayOfWeek.Mardi:
+            Console.WriteLine("Le mardi est merveilleux !");
             break;
-        case DayOfWeek.Wednesday:
-            Console.WriteLine("Wednesday is awesome!");
+        case DayOfWeek.Mercredi:
+            Console.WriteLine("Le mercredi est formidable !");
             break;
-        case DayOfWeek.Thursday:
-            Console.WriteLine("Thursday is fantastic!");
+        case DayOfWeek.Jeudi:
+            Console.WriteLine("Le jeudi est fantastique !");
             break;
-        case DayOfWeek.Friday:
-            Console.WriteLine("Friday is fabulous!");
+        case DayOfWeek.Vendredi:
+            Console.WriteLine("Le vendredi est fabuleux !");
             break;
-        case DayOfWeek.Saturday:
-            Console.WriteLine("Saturday is superb!");
+        case DayOfWeek.Samedi:
+            Console.WriteLine("Le samedi est superbe !");
             break;
-        case DayOfWeek.Sunday:
-            Console.WriteLine("Sunday is splendid!");
+        case DayOfWeek.Dimanche:
+            Console.WriteLine("Le dimanche est splendide !");
             break;
         default:
-            Console.WriteLine("Hmm, interesting choice!");
+            Console.WriteLine("Hmm, choix intéressant !");
             break;
     }
 }
 ```
 
-### Enumerations in C#
+### Enumérations en C#
 
-Enumerations, often referred to as enums, allow developers to define a named set of related named constants, representing integral types.
+Les énumérations, souvent appelées enums, permettent aux développeurs de définir un ensemble nommé de constantes nommées, représentant des types intégraux.
 
-#### Syntax:
+#### Syntaxe :
 
 ```csharp
 enum EmpType : byte
 {
     Manager = 10,
-    Grunt = 1,
-    Contractor = 100,
-    VicePresident = 9
+    Employé = 1,
+    Contractuel = 100,
+    VicePrésident = 9
 }
 ```
 
-- Enums are often suffixed with "Enum" for clarity, although it's not mandatory.
-- Enums are typically based on the underlying type `System.Int32` (C# `int`), but this can be customized to other integral types like `byte` as shown.
-- Each enum member can have a specific value assigned to it, which defaults to increasing integers if not specified.
+- Les énumérations sont souvent suffixées par "Enum" pour plus de clarté, bien que ce ne soit pas obligatoire.
+- Les énumérations sont généralement basées sur le type sous-jacent `System.Int32` (C# `int`), mais cela peut être personnalisé vers d'autres types intégraux comme `byte` comme illustré.
+- Chaque membre de l'énumération peut avoir une valeur spécifique qui lui est attribuée, qui est par défaut des entiers croissants s'ils ne sont pas spécifiés.
 
-#### Flags Attribute
+#### Attribut Flags
 
 ```csharp
 [Flags]
 public enum ContactPreference
 {
     Email = 1,
-    Phone = 2,
-    Mail = 4,
+    Téléphone = 2,
+    Courrier = 4,
     Fax = 8
 }
 ```
 
-- The `Flags` attribute allows combining multiple enum values into a single variable using bitwise OR (`|`) operation.
-- This enables representing multiple options in a single variable, providing a concise way to manage options.
+- L'attribut `Flags` permet de combiner plusieurs valeurs d'énumération en une seule variable en utilisant l'opération logique OR (`|`).
+- Cela permet de représenter plusieurs options dans une seule variable, offrant un moyen concis de gérer les options.
 
-#### Example Usage:
+#### Exemple d'utilisation :
 
 ```csharp
-ContactPreference userPreference = ContactPreference.Email | ContactPreference.Phone;
-Console.WriteLine($"User preferences: {userPreference}");
+ContactPreference preferenceUtilisateur = ContactPreference.Email | ContactPreference.Téléphone;
+Console.WriteLine($"Préférences de l'utilisateur : {preferenceUtilisateur}");
 ```
 
-- Here, `userPreference` combines both Email and Phone preferences.
-- This technique is particularly useful for scenarios where multiple options need to be represented or processed simultaneously.
+- Ici, `preferenceUtilisateur` combine à la fois les préférences Email et Téléphone.
+- Cette technique est particulièrement utile pour les scénarios où plusieurs options doivent être représentées ou traitées simultanément.
 
 ```plaintext
-Output:
-User preferences: Email, Phone
+Sortie :
+Préférences de l'utilisateur : Email, Téléphone
 ```
 
-By leveraging enums and their associated features like the `switch` statement and the `Flags` attribute, developers can write cleaner, more readable code while effectively managing and representing sets of related constants.
+En tirant parti des énumérations et de leurs fonctionnalités associées telles que l'instruction `switch` et l'attribut `Flags`, les développeurs peuvent écrire un code plus propre, plus lisible tout en gérant efficacement et en représentant des ensembles de constantes liées.
