--- a/04_Control Statements/0_If 101.md
+++ b/04_Control Statements/0_If 101.md
@@ -1,22 +1,21 @@
-```markdown
-# C# Pattern Matching Examples
+# Exemples de Correspondance de Motifs en C#
 
 ## Introduction
-Pattern matching is a powerful feature in C# that allows for more concise and expressive code when dealing with complex data structures. It enables you to match patterns in data types, making your code more readable and maintainable.
+La correspondance de motifs est une fonctionnalité puissante en C# qui permet d'écrire du code plus concis et expressif lorsqu'il s'agit de manipuler des structures de données complexes. Elle vous permet de faire correspondre des motifs dans les types de données, rendant votre code plus lisible et plus facile à maintenir.
 
-## Basic Pattern Matching
+## Correspondance de motifs de base
 ```csharp
 object item1 = 123;
-object item2 = "Hello";
+object item2 = "Bonjour";
 
 if (item1 is string stringValue)
 {
-    Console.WriteLine($"{stringValue} is a string");
+    Console.WriteLine($"{stringValue} est une chaîne de caractères");
 }
 ```
-In this example, we use the `is` keyword to check if `item1` is of type `string`. If it is, the value is assigned to the variable `stringValue` and then printed.
+Dans cet exemple, nous utilisons le mot-clé `is` pour vérifier si `item1` est de type `string`. Si c'est le cas, la valeur est assignée à la variable `stringValue` puis imprimée.
 
-## Type Patterns
+## Motifs de Type
 ```csharp
 object item1 = 123;
 Type itemType = typeof(string);
@@ -24,54 +23,53 @@ char character = 'f';
 
 if (itemType is Type)
 {
-    Console.WriteLine($"{itemType} is a Type");
+    Console.WriteLine($"{itemType} est un Type");
 }
 ```
-Here, we utilize the `is` keyword to check if `itemType` is of type `Type`, which it is. Thus, we print that `itemType` is indeed a type.
+Ici, nous utilisons le mot-clé `is` pour vérifier si `itemType` est de type `Type`, ce qui est le cas. Ainsi, nous imprimons que `itemType` est effectivement un type.
 
-## Relational, Conjunctive, and Disjunctive Patterns
+## Motifs Relationnels, Conjonctifs et Disjonctifs
 ```csharp
 if (character is >= 'a' and <= 'z' or >= 'A' and <= 'Z')
 {
-    Console.WriteLine($"{character} is a character");
+    Console.WriteLine($"{character} est un caractère");
 };
 ```
-This snippet demonstrates relational, conjunctive, and disjunctive patterns. It checks if `character` is within the range of lowercase or uppercase letters and prints accordingly.
+Cet extrait de code montre des motifs relationnels, conjonctifs et disjonctifs. Il vérifie si `character` est dans la plage des lettres minuscules ou majuscules et imprime en conséquence.
 
-## Parenthesized Patterns
+## Motifs Parenthésés
 ```csharp
 if (character is (>= 'a' and <= 'z') or (>= 'A' and <= 'Z') or '.' or ',')
 {
-    Console.WriteLine($"{character} is a character or separator");
+    Console.WriteLine($"{character} est un caractère ou un séparateur");
 };
 ```
-Here, we use parenthesized patterns to group conditions. It checks if `character` is a letter or specific separators like '.' or ','.
+Ici, nous utilisons des motifs parenthésés pour regrouper les conditions. Il vérifie si `character` est une lettre ou des séparateurs spécifiques comme '.' ou ','.
 
-## Negative Patterns
+## Motifs Négatifs
 ```csharp
 if (item1 is not string)
 {
-    Console.WriteLine($"{item1} is not a string");
+    Console.WriteLine($"{item1} n'est pas une chaîne de caractères");
 }
 
 if (item1 is not null)
 {
-    Console.WriteLine($"{item1} is not null");
+    Console.WriteLine($"{item1} n'est pas null");
 }
 ```
-These snippets showcase negative patterns. The first one checks if `item1` is not a string, while the second one checks if `item1` is not null.
+Ces extraits de code présentent des motifs négatifs. Le premier vérifie si `item1` n'est pas une chaîne de caractères, tandis que le second vérifie si `item1` n'est pas null.
 
-## Ternary Conditional Operator
+## Opérateur Conditionnel Ternaire
 ```csharp
-condition ? first_expression : second_expression;
+condition ? première_expression : deuxième_expression;
 ```
-The ternary conditional operator is a concise way to express conditional statements. If `condition` is true, `first_expression` is evaluated; otherwise, `second_expression` is evaluated.
+L'opérateur conditionnel ternaire est un moyen concis d'exprimer des instructions conditionnelles. Si `condition` est vraie, `première_expression` est évaluée; sinon, `deuxième_expression` est évaluée.
 
-## Example Usage of Ternary Operator
+## Exemple d'utilisation de l'opérateur ternaire
 ```csharp
-string data = "example";
-(data.Length > 0) ? Console.WriteLine("String is greater than 0 characters") : Console.WriteLine("String is not greater than 0 characters");
+string data = "exemple";
+(data.Length > 0) ? Console.WriteLine("La chaîne contient plus de 0 caractères") : Console.WriteLine("La chaîne ne contient pas plus de 0 caractères");
 ```
-This code checks if the length of the string `data` is greater than 0. If true, it prints a message indicating that the string has characters; otherwise, it prints a message indicating the absence of characters.
 
-```
+Ce code vérifie si la longueur de la chaîne `data` est supérieure à 0. Si c'est le cas, il imprime un message indiquant que la chaîne contient des caractères; sinon, il imprime un message indiquant l'absence de caractères.
